[package]
name = "azalea-language"
description = "Translate Minecraft strings from their id."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
compact_str = { workspace = true, features = ["serde"] }
serde_json.workspace = true

[lints]
workspace = true
