[package]
description = "A fast NBT serializer and deserializer."
edition = "2021"
license = "MIT"
name = "azalea-nbt"
version = "0.6.0"
repository = "https://github.com/mat-1/azalea/tree/main/azalea-nbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "^0.8.3" }
azalea-buf = { path = "../azalea-buf", version = "^0.6.0" }
byteorder = "^1.4.3"
flate2 = "^1.0.25"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
criterion = {version = "^0.4.0", features = ["html_reports"]}

[features]
default = []
serde = ["dep:serde", "ahash/serde"]

[profile.release]
lto = true

[profile.bench]
debug = true

[[bench]]
harness = false
name = "my_benchmark"
