[package]
description = "A fast NBT serializer and deserializer."
edition = "2021"
license = "MIT"
name = "azalea-nbt"
version = "0.6.0"
repository = "https://github.com/mat-1/azalea/tree/main/azalea-nbt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea-buf = { path = "../azalea-buf", version = "^0.6.0" }
byteorder = "^1.4.3"
compact_str = { version = "0.7.0", features = ["serde"] }
enum-as-inner = "0.5.1"
flate2 = "^1.0.25"
log = "0.4.17"
packed_simd_2 = "0.3.8"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "^0.4.0", features = ["html_reports"] }
graphite_binary = "0.1.0"
valence_nbt = "0.4.0"
fastnbt = "2.4.3"

[features]
default = []
serde = ["dep:serde"]

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
debug = true

[[bench]]
harness = false
name = "nbt"

[[bench]]
harness = false
name = "compare"
