[package]
edition = "2021"
name = "azalea-pathfinder"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
azalea = { version = "0.3.0", path = "../azalea" }
azalea-block = { version = "0.3.0", path = "../azalea-block" }
azalea-client = { version = "0.3.0", path = "../azalea-client" }
azalea-core = { version = "0.3.0", path = "../azalea-core" }
azalea-physics = { version = "0.3.0", path = "../azalea-physics" }
azalea-world = { version = "0.3.0", path = "../azalea-world" }
num-traits = "0.2.15"
parking_lot = "0.12.1"
priority-queue = "1.2.3"

[dev-dependencies]
tokio = "1.21.2"
