[package]
name = "azalea-physics"
description = "Physics for Minecraft entities."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
bevy_time.workspace = true
uuid.workspace = true

[dependencies]
azalea-block.workspace = true
azalea-core.workspace = true
azalea-entity = { version = "0.12.0", path = "../azalea-entity" }
azalea-inventory = { version = "0.12.0", path = "../azalea-inventory" }
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true
parking_lot.workspace = true
