[package]
name = "azalea-physics"
description = "Physics for Minecraft entities."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
uuid.workspace = true

[dependencies]
azalea-block.workspace = true
azalea-core.workspace = true
azalea-entity.workspace = true
azalea-inventory.workspace = true
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
