[package]
name = "azalea-protocol"
description = "Send and receive Minecraft packets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies]
async-recursion.workspace = true
azalea-auth.workspace = true
azalea-block = { path = "../azalea-block", version = "0.12.0", default-features = false }
azalea-brigadier = { path = "../azalea-brigadier", version = "0.12.0", features = [
    "azalea-buf",
] }
azalea-buf.workspace = true
azalea-chat = { path = "../azalea-chat", version = "0.12.0", features = [
    "numbers",
    "azalea-buf",
] }
azalea-core = { path = "../azalea-core", version = "0.12.0", optional = true, features = [
    "serde",
] }
azalea-crypto.workspace = true
azalea-entity.workspace = true
azalea-inventory.workspace = true
azalea-protocol-macros = { path = "./azalea-protocol-macros", version = "0.12.0" }
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_ecs.workspace = true
# byteorder.workspace = true
flate2.workspace = true
futures.workspace = true
futures-lite.workspace = true
# futures-util.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
simdnbt.workspace = true
socks5-impl = { workspace = true, features = ["client"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
hickory-resolver = { workspace = true, features = ["tokio", "system-config"] }
uuid.workspace = true
crc32fast = { workspace = true, optional = true }

[features]
connecting = []
default = ["packets"]
packets = ["connecting", "dep:azalea-core", "crc32"]
crc32 = ["dep:crc32fast"]
