[package]
name = "azalea-protocol"
description = "Send and receive Minecraft packets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies]
azalea-auth.workspace = true
azalea-block.workspace = true
azalea-brigadier = { workspace = true, features = ["azalea-buf"] }
azalea-buf.workspace = true
azalea-chat = { workspace = true, features = ["numbers", "azalea-buf"] }
azalea-core = { workspace = true, optional = true }
azalea-crypto.workspace = true
azalea-entity.workspace = true
azalea-inventory.workspace = true
azalea-protocol-macros.workspace = true
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_ecs.workspace = true
# byteorder.workspace = true
flate2.workspace = true
futures.workspace = true
futures-lite.workspace = true
# futures-util.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
simdnbt.workspace = true
socks5-impl = { workspace = true, features = ["client"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
hickory-resolver = { workspace = true, features = ["tokio", "system-config"] }
uuid.workspace = true
indexmap.workspace = true

[features]
default = ["packets", "online-mode"]
connecting = []
packets = ["connecting", "dep:azalea-core"]
online-mode = ["azalea-auth/online-mode"]

[lints]
workspace = true
