[package]
name = "azalea-registry"
description = "Use Minecraft's registries."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
serde = ["azalea-registry-macros/serde", "dep:serde"]
default = ["serde"]

[dependencies]
azalea-buf.workspace = true
azalea-registry-macros.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
simdnbt.workspace = true

[lints]
workspace = true
