[package]
name = "azalea-registry"
description = "Use Minecraft's registries."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-buf.workspace = true
azalea-registry-macros.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
simdnbt.workspace = true

[features]
serde = ["azalea-registry-macros/serde", "dep:serde"]
default = ["serde"]

[lints]
workspace = true
