[package]
name = "azalea-world"
description = "The Minecraft world representation used in Azalea."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
azalea-client = { path = "../azalea-client" }
criterion = "0.6.0"

[dependencies]
azalea-block = { path = "../azalea-block", default-features = false, version = "0.12.0" }
azalea-buf = { path = "../azalea-buf", version = "0.12.0" }
azalea-core = { path = "../azalea-core", version = "0.12.0", features = [
    "bevy_ecs",
] }
azalea-registry = { path = "../azalea-registry", version = "0.12.0" }
bevy_ecs.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
nohash-hasher.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
simdnbt.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
serde = ["dep:serde"]

[[bench]]
name = "chunks"
harness = false
