[package]
name = "azalea"
description = "A framework for creating Minecraft bots."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "`azalea = \"[a-z0-9\\.-]+\"`", replace = "`azalea = \"{{version}}\"`" },
]

[dependencies]
azalea-auth.workspace = true
azalea-block.workspace = true
azalea-brigadier.workspace = true
azalea-buf.workspace = true
azalea-chat.workspace = true
azalea-client.workspace = true
azalea-core.workspace = true
azalea-entity.workspace = true
azalea-inventory.workspace = true
azalea-physics.workspace = true
azalea-protocol.workspace = true
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_tasks = { workspace = true, features = ["multi_threaded"] }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
futures.workspace = true
futures-lite.workspace = true
indexmap.workspace = true
nohash-hasher.workspace = true
num-format.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true


[dev-dependencies]
criterion.workspace = true
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rand.workspace = true
anyhow.workspace = true
bevy_log.workspace = true

[features]
default = ["log", "serde", "packet-event", "online-mode"]
# enables bevy_log::LogPlugin by default
log = ["azalea-client/log"]
serde = ["dep:serde", "azalea-registry/serde", "azalea-world/serde"]
packet-event = ["azalea-client/packet-event"]
online-mode = ["azalea-client/online-mode"]

[[bench]]
name = "pathfinder"
harness = false

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "checks"
harness = false

[lints]
workspace = true
