[package]
edition = "2021"
name = "minecraft-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "^0.3.2"
async-trait = "0.1.51"
byteorder = "^1.4.3"
bytes = "^1.1.0"
minecraft-chat = {path = "../minecraft-chat"}
serde = {version = "1.0.130", features = ["serde_derive"]}
serde_json = "^1.0.72"
thiserror = "^1.0.30"
tokio = {version = "^1.14.0", features = ["io-util", "net", "macros"]}
tokio-util = "^0.6.9"
trust-dns-resolver = "^0.20.3"
