[package]
description = "Macros internally used in azalea-registry."
edition = "2021"
license = "MIT"
name = "azalea-registry-macros"
repository = "https://github.com/mat-1/azalea/tree/main/azalea-registry/azalea-registry-macros"
version = "0.7.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.31"

[features]
serde = []
