[package]
description = "Macros internally used in azalea-registry."
edition = "2021"
license = "MIT"
name = "azalea-registry-macros"
repository = "https://github.com/azalea-rs/azalea/tree/main/azalea-registry/azalea-registry-macros"
version = "0.10.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"

[features]
serde = []
