[package]
name = "azalea-registry-macros"
description = "Macros internally used in azalea-registry."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
#proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
serde = []
